# blackjack

./: CMakeLists.txt  Makefile  README.md  carte.c  carte.h  jeu.c  main.c  main.h
include/: carte.h  jeu.h  main.h  son.h
src/: carte.c  jeu.c  main.c  son.c
